# NativeOggEncoder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Plugins/NativeOggEncoder/: NativeOggEncoder.asmdef  NativeOggEncoder.cs
include/: native_ogg_encoder.h
scripts/: build_android.sh  build_ios.sh  build_windows.bat
src/: native_ogg_encoder.c  time_stretch.cpp  time_stretch.h
